templates/workshop-exercise_template.yaml
---
# Source: workshop-exercise/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-workshop-exercise
  annotations:
    
    meta.helm.sh/release-namespace: "default"
    meta.helm.sh/release-name: "release-name"
  labels:
    helm.sh/chart: workshop-exercise-0.0.260
    app.kubernetes.io/name: workshop-exercise
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.260"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: workshop-exercise
    app.kubernetes.io/instance: release-name
---
# Source: workshop-exercise/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-workshop-exercise
  annotations:
    
    meta.helm.sh/release-namespace: "default"
    meta.helm.sh/release-name: "release-name"
  labels:
    helm.sh/chart: workshop-exercise-0.0.260
    app.kubernetes.io/name: workshop-exercise
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.260"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: workshop-exercise
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: workshop-exercise
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      containers:
        - name: workshop-exercise
          securityContext:
            {}
          image: "stakater/workshop-exercise:0.0.260"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: workshop-exercise/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stakater 
  namespace: default
spec:
  host: stakater-workshop-exercise.apps.devtest.vxdqgl7u.kubeapp.cloud
  to:
    kind: Service
    name: release-name-workshop-exercise
    weight: 100
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
